# skills

./: .gitignore
a-share-macro-skill/: SKILL.md  macro_index_data.json  pyproject.toml
a-share-macro-skill/scripts/: calculate_macro_index.py
ask-me/: README.md  SKILL.md
bond-market-overview-skill/: SKILL.md  bond_index_data.json  pyproject.toml
bond-market-overview-skill/feishu_webhook/: __init__.py  client.py  main.py
bond-market-overview-skill/scripts/: calculate_bond_index.py
docker-cn-source/: README.md  SKILL.md
entity-economy-skill/: SKILL.md  deepseek_text_20260421_eca1db.txt  pyproject.toml
exchange-rate-skill/: SKILL.md  exchange_rate_data.json  exchange_rate_report.md  exchange_rates.csv  fund_flow.csv  pyproject.toml  ted_spread.csv
exchange-rate-skill/scripts/: fetch_common.py  fetch_exchange_rates.py  fetch_fund_flow.py  fetch_north_flow.py  fetch_ted_spread.py  run.sh  run_all.py
find-skills/: README.md
git-commit-push/: README.md  SKILL.md
inflation-skill/: SKILL.md  pyproject.toml
monetary-policy-skill/: .gitignore  README.md  SKILL.md  requirements.txt
money-supply-skill/: SKILL.md  pyproject.toml
notes-deal/: README.md  SKILL.md
python-venv/: README.md  SKILL.md
risk-appetite-skill/: SKILL.md  pyproject.toml  risk_data.json  risk_report.md  test_eastmoney.py  提示词.md
risk-appetite-skill/scripts/: fetch_common.py  fetch_margin.py  fetch_volume.py  fetch_volume_exchange.py  run.sh  run_all.py
skill-creator/: README.md
think-skill/: SKILL.md
update-doc/: README.md  SKILL.md
windows-bat-dev/: README.md  SKILL.md
(+46 files in other folders)
