[project]
name = "exchange-rate-skill"
version = "0.1.0"
description = "汇率与资金流向 Skill - 美元指数、人民币汇率、北向/南向资金、TED利差"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.14.0",
    "fredapi>=0.5.2",
    "pandas>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
